Holy Grail Layout

--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mel Cary WDD 131</title>
-    <link rel="stylesheet" href="styles/layout.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Mel Cary">
+  <link rel="stylesheet" href="styles/layout.css">
+  <title>Holy Grail Layout</title>
 </head>
 <body>
-    <header>
-    <h1>Header content</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact Us</a></li>
-        </ul>
-    </nav>
+  <header class="header">
+    <h1>Header Content</h1>
+  </header>
 
-   <div class="content">
-    <main>Main Content</main>
-    <aside>Aside Content</aside>
-   </div>
+  <nav class="main-nav">
+    <ul>
+      <li>Home</li>
+      <li>Projects</li>
+      <li>Services</li>
+      <li>Contact Us</li>
+    </ul>
+  </nav>
+
+  <div class="container">
+    <main>
+      <h2>Main Content</h2>
+    </main>
+    <aside>
+      <h2>Aside Content</h2>
+    </aside>
+  </div>
+
+  <footer>
+    <h2>Footer Content</h2>
+  </footer>
 </body>
-<footer>Footer Content</footer>
 </html>
