--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -19,7 +19,7 @@
         <a id="menu" href="#"></a>
         <nav>
             <ul class="main-nav">
-                <li><a href="#">Home</a></li>
+                <li><a href="#">Temples</a></li>
                 <li><a href="#">Old</a></li>
                 <li><a href="#">New</a></li>
                 <li><a href="#">Large</a></li>
@@ -28,7 +28,7 @@
         </nav>
     </header>
     <main >
-        <h1>Home</h1>
+        <h1>Temples</h1>
         <section id="temples-container">
         </section>
     </main>
