--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -19,7 +19,7 @@
         <a id="menu" href="#"></a>
         <nav>
             <ul class="main-nav">
-                <li><a href="#">Temples</a></li>
+                <li><a href="#">Home</a></li>
                 <li><a href="#">Old</a></li>
                 <li><a href="#">New</a></li>
                 <li><a href="#">Large</a></li>
